--- a/FileDrawer/Components/Layout.xaml
+++ b/FileDrawer/Components/Layout.xaml
@@ -11,5 +11,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
+        <local:NavigationBar Grid.Row="0" DataContext="{Binding NavigationBarViewModel}"></local:NavigationBar>
+        <ContentControl Grid.Row="1" Content="{Binding ContentViewModel}" Margin="20"></ContentControl>
     </Grid>
+
 </UserControl>
