--- a/FileDrawer/Components/NavigationBar.xaml
+++ b/FileDrawer/Components/NavigationBar.xaml
@@ -5,16 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FileDrawer.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="600">
+             d:DesignHeight="50" d:DesignWidth="600">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="150" ></ColumnDefinition>
+            <ColumnDefinition Width="150"></ColumnDefinition>
+            <ColumnDefinition Width="150"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Text="FileDrawer"></TextBlock>
-
-        <Button Grid.Column="1" Content="Home" Command="{Binding NavigateHomeCommand}"></Button>
-        <Button Grid.Column="2" Content="Create Drawer" Command="{Binding NavigateCreateDrawerCommand}"></Button>
+        <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="FileDrawer" FontSize="30"></TextBlock>
+        <Button Grid.Column="1" VerticalAlignment="Center" Height="20" Width="100" Content="Home" Command="{Binding NavigateHomeCommand}"></Button>
+        <Button Grid.Column="2" VerticalAlignment="Center" Height="20" Width="100" Content="Manage Drawers" Command="{Binding NavigateCreateDrawerCommand}"></Button>
+     
     </Grid>
 </UserControl>
