--- a/FileDrawer/Views/CreateNewDrawerView.xaml
+++ b/FileDrawer/Views/CreateNewDrawerView.xaml
@@ -5,20 +5,34 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FileDrawer.Views"
              mc:Ignorable="d" 
-             Height="150" Width="200" Background="White">
+             Height="200" Width="300" Background="White">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"></ColumnDefinition>
-            <ColumnDefinition Width="100"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Content="Name:" HorizontalAlignment="Center" Margin="0,12,0,0" VerticalAlignment="Top"/>
-        <Label Grid.Column="0" Content="Drawer path:" HorizontalAlignment="Center" Margin="0,49,0,0" VerticalAlignment="Top"/>
+        <StackPanel>
+            <Grid Height="60">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"></ColumnDefinition>
+                    <ColumnDefinition Width="150"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Content="Name:" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top"/>
+                <Label Content="Path:" HorizontalAlignment="Center" Margin="0,28,0,0" VerticalAlignment="Top"/>
+                <TextBox Grid.Column="1" HorizontalAlignment="Center" Margin="0,9,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="120"
+                         Text="{Binding Drawer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Grid.Column="1" HorizontalAlignment="Center" Margin="0,35,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="120"
+                         Text="{Binding Drawer.Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+        </StackPanel>
+        <ListView Grid.Row="1" Width="280" Height="80" Margin="10,31,10,29">
 
-        <Button Grid.Column="1" Width="40" Height="20" Content="Save" Command="{Binding SaveDrawerCommand}" CommandParameter="{Binding Drawer}" Margin="0,126,60,4"/>
-        <Button Grid.Column="1" Width="40" Height="20" Content="Close" Command="{Binding CloseCreatorCommand}" Margin="50,126,10,4"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="0,16,0,0" Text="{Binding Drawer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="91"/>
-
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="0,53,0,0" Text="{Binding DrawerPathText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="90"/>
+        </ListView>
+        <Button Content="Save" Width="50" HorizontalAlignment="Left" Margin="181,117,0,0" Grid.Row="1" VerticalAlignment="Top" Height="18" FontSize="10"
+                Command="{Binding SaveDrawerCommand}" CommandParameter="{Binding Drawer}" />
+        <Button Content="Close" Width="50" HorizontalAlignment="Left" Margin="240,117,0,0" Grid.Row="1" VerticalAlignment="Top" Height="18" FontSize="10"
+                Command="{Binding CloseCreatorCommand}"/>
+        <Label Content="Add files to new drawer"  HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
