--- a/FileDrawer/App.xaml
+++ b/FileDrawer/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="FileDrawer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FileDrawer">
+             xmlns:local="clr-namespace:FileDrawer"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
     </Application.Resources>
 </Application>
